force-app/main/default/objects/Relev_de_prix__c/Relev_de_prix__c.object-meta.xml
<CustomObject>
    <label>Relevé des prix</label>
    <nameField>
        <label>Intitulé</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relevés des prix</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>