force-app/main/default/objects/Relev_de_prix__c/fields/Agence__c.field-meta.xml
<CustomField>
    <fullName>Agence__c</fullName>
    <label>Agence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agence_commerciale</valueSetName>
    </valueSet>
</CustomField>