force-app/main/default/objects/Relev_de_prix__c/fields/Annee__c.field-meta.xml
<CustomField>
    <fullName>Annee__c</fullName>
    <label>Année</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>