force-app/main/default/objects/Relev_de_prix__c/fields/Circuit_de_client__c.field-meta.xml
<CustomField>
    <fullName>Circuit_de_client__c</fullName>
    <label>Circuit du client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Traditionnel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>