force-app/main/default/objects/Relev_de_prix__c/fields/Milieu__c.field-meta.xml
<CustomField>
    <fullName>Milieu__c</fullName>
    <label>Milieu</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Milieu</valueSetName>
    </valueSet>
</CustomField>