force-app/main/default/objects/Relev_de_prix__c/fields/Periode__c.field-meta.xml
<CustomField>
    <fullName>Periode__c</fullName>
    <formula>TEXT(Mois__c) + &apos;/&apos; + TEXT(Annee__c)</formula>
    <label>Période</label>
    <type>Text</type>
</CustomField>