force-app/main/default/objects/Relev_de_prix__c/fields/R_gion__c.field-meta.xml
<CustomField>
    <fullName>R_gion__c</fullName>
    <label>Région</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Casablanca</fullName>
            </value>
            <value>
                <fullName>Fès</fullName>
            </value>
            <value>
                <fullName>Tanger</fullName>
            </value>
            <value>
                <fullName>Agadir</fullName>
            </value>
            <value>
                <fullName>Marrakech</fullName>
            </value>
            <value>
                <fullName>Oulad Ayad</fullName>
            </value>
            <value>
                <fullName>Oujda</fullName>
            </value>
            <value>
                <fullName>Meknes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>