force-app/main/default/objects/Relev_de_prix__c/fields/Sous_r_gion__c.field-meta.xml
<CustomField>
    <fullName>Sous_r_gion__c</fullName>
    <label>Sous région</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sous_r_gion</valueSetName>
    </valueSet>
</CustomField>