force-app/main/default/objects/Relev_de_prix__c/fields/Type_de_client__c.field-meta.xml
<CustomField>
    <fullName>Type_de_client__c</fullName>
    <label>Type de client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gros</fullName>
            </value>
            <value>
                <fullName>Demi Gros</fullName>
            </value>
            <value>
                <fullName>Détaillant</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>