force-app/main/default/objects/Relev_de_prix__c/fields/Type_de_produit__c.field-meta.xml
<CustomField>
    <fullName>Type_de_produit__c</fullName>
    <label>Type de produit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pain</fullName>
            </value>
            <value>
                <fullName>Lingot</fullName>
            </value>
            <value>
                <fullName>Morceaux</fullName>
            </value>
            <value>
                <fullName>Granulé plastique</fullName>
            </value>
            <value>
                <fullName>Granulé papier 1kg</fullName>
            </value>
            <value>
                <fullName>Granulé papier 2kg</fullName>
            </value>
            <value>
                <fullName>Granulé 50kg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>