force-app/main/default/objects/Relev_de_prix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>R_gion__c</columns>
    <columns>Sous_r_gion__c</columns>
    <columns>Milieu__c</columns>
    <columns>Circuit_de_client__c</columns>
    <columns>Type_de_client__c</columns>
    <columns>Type_de_produit__c</columns>
    <columns>Periode__c</columns>
    <columns>Prix__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les Relevés des prix</label>
</ListView>